--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -104,7 +104,7 @@ bolo2gh:
 bb2gh:
   do: exec
   desc: (routine) mirror bitbucket to github on lpc
-  command: cd ~/git/source/bolo2github && git pull && make clean && make mirror-bitbucket && make clean
+  command: sudo mkdir -p /mnt/tmpfs && sudo mount -o size=2G -t tmpfs none /mnt/tmpfs && cd ~/git/source/bolo2github && git pull && make mirror-bitbucket; sudo umount /mnt/tmpfs
 
 # stats ########################################################################
 
