--- a/snippets/linux.yml
+++ b/snippets/linux.yml
@@ -45,3 +45,8 @@ inotify:
   do: exec
   desc: refresh inotify and show the before and after change; restart dropbox service
   command: sysctl fs.inotify; sudo sysctl -p; sysctl fs.inotify; sudo systemctl restart dropbox@kolen.service && sudo systemctl restart system-dropbox.slice
+
+xrandr:
+  do: exec
+  desc: change resolution and/or framerate
+  command: xrandr --output <<output(HDMI-2,HDMI-3)>> --mode <<resolution(1920x1080,3840x2160)>> -r <<framerate(23.98,24.00,29.97,30.00,59.97,60.00)>>
