package.yml: add conda:env:update

--- a/snippets/package.yml
+++ b/snippets/package.yml
@@ -33,6 +33,10 @@ conda:update:
   do: exec
   desc: update conda and anaconda
   command: conda update -n base -c defaults conda anaconda
+conda:env:update:
+  do: exec
+  desc: update current conda environment
+  command: conda update --all
 
 pip:dev:
   do: exec
