--- a/snippets/package.yml
+++ b/snippets/package.yml
@@ -37,6 +37,10 @@ conda:env:update:
   do: exec
   desc: update current conda environment
   command: conda update --all
+conda:clean:
+  do: exec
+  desc: conda cleanup all
+  command: conda clean --all -y
 
 pip:dev:
   do: exec
@@ -57,6 +61,10 @@ brew:cleanup:
   do: exec
   desc: force cleanup and clear cache
   command: brew cleanup -s && rm -rf $(brew --cache)
+brew:linux:ca:nersc:
+  do: exec
+  desc: ln ca cert on NERSC
+  command: ln -s /etc/ssl/certs ~/.linuxbrew/etc/openssl && ln -s /var/lib/ca-certificates/ca-bundle.pem ~/.linuxbrew/etc/openssl/cert.pem && ~/.linuxbrew/opt/openssl/bin/c_rehash
 # linux apt
 apt:update:
   do: exec
