--- a/snippets/bash.yml
+++ b/snippets/bash.yml
@@ -261,6 +261,10 @@ smb:
   do: exec
   desc: connect to samda on router
   command: sudo mount -t cifs -o username=admin //192.168.1.1/Seagate_Backup_SGC42 /media/kolen/dir-860l
+smb:reload:
+  do: exec
+  desc: reload samba conf
+  command: sudo smbcontrol all reload-config
 ip:router:
   do: exec
   desc: show the IP address of router
