--- a/snippets/ssh.yml
+++ b/snippets/ssh.yml
@@ -1,3 +1,7 @@
+mosh:co:
+  do: exec
+  desc: convenient command to 1) get NERSC key, 2) find cori login node according to load balancer, 3) mosh to that login node
+  command: s r ssh:nersc:gen; mosh $(ssh cori hostname)
 ssh:nersc:gen:
   do: exec
   desc: generate NERSC ssh key
