--- a/snippets/ssh.yml
+++ b/snippets/ssh.yml
@@ -5,7 +5,7 @@ mosh:co:
 ssh:nersc:gen:
   do: exec
   desc: generate NERSC ssh key
-  command: . activate all3-intel && s r dautil-py && ~/git/fork/NERSC-MFA/sshproxy.sh -u khcheung
+  command: (. activate all3-intel && s r dautil-py && ~/git/fork/NERSC-MFA/sshproxy.sh -u khcheung)
 ssh:tunnel:
   do: exec
   desc: tunnel a port from client to server.
