--- a/snippets/git.yml
+++ b/snippets/git.yml
@@ -54,6 +54,10 @@ git:batch:
   do: exec
   desc: batch pull/psuh at all repositories at a certain level
   command: level=$((<<level>> + 1)); find . -maxdepth $level -mindepth $level -type d -name '.git' -print0 | xargs -0 -n1 -P0 bash -c 'cd $0/.. && git <<action(pull,push)>>'
+git:batch:debug:
+  do: exec
+  desc: batch pull/psuh at all repositories at a certain level
+  command: level=$((<<level>> + 1)); find . -maxdepth $level -mindepth $level -type d -name '.git' -print0 | xargs -0 -n1 -P1 bash -c 'echo $0 && cd $0/.. && git <<action(pull,push)>>'
 git:reset:batch:
   do: exec
   desc: batch reset at all repositories at a certain level
