--- a/snippets/package.yml
+++ b/snippets/package.yml
@@ -72,7 +72,12 @@ brew:linux:ca:nersc:
 # linux apt
 apt:update:
   do: exec
+  desc: update ubuntu
   command: sudo apt -y update && sudo apt -y full-upgrade && sudo apt -y autoremove
+apt:upgrade:
+  do: exec
+  desc: upgrade ubuntu to next release
+  command: sudo apt update -y && sudo apt dist-upgrade -y && sudo apt install update-manager-core -y && do-release-upgrade -d
 apt:ls:
   do: exec
   desc: list installed apt packages
