--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
+dist: bionic
+
 language: go
 
 go:
-  - "1.3.x"
-  - "1.4.x"
-  - "1.5.x"
-  - "1.6.x"
-  - "1.7.x"
-  - "1.8.x"
   - "1.9.x"
   - "1.10.x"
   - "1.11.x"
+  - "1.12.x"
+  - "1.13.x"
+  - "1.14.x"
   - "1.x.x"
   - master
 
 install:
-      - go get -t ./...
+  - go get -t ./...
 script:
-  - make -j3
+  - go test -v ./...
