--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,10 +21,11 @@ jobs:
           - "1.18"
           - "1.19"
           - "1.20"
+          - "1.21"
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-go@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.version }}
-    - run: go get -t ./...
+    - run: go build
     - run: go test -v ./...
