--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -12,103 +12,59 @@ jobs:
         version:
           - "1.21"
         # https://gist.github.com/asukakenji/f15ba7e588ac42795f421b48b8aede63
-        include:
-          - GOOS: aix
-            GOARCH: ppc64
-          - GOOS: android
-            GOARCH: 386
-          - GOOS: android
-            GOARCH: amd64
-          - GOOS: android
-            GOARCH: arm
-          - GOOS: android
-            GOARCH: arm64
-          - GOOS: darwin
-            GOARCH: amd64
-          - GOOS: darwin
-            GOARCH: arm64
-          - GOOS: dragonfly
-            GOARCH: amd64
-          - GOOS: freebsd
-            GOARCH: 386
-          - GOOS: freebsd
-            GOARCH: amd64
-          - GOOS: freebsd
-            GOARCH: arm
-          - GOOS: freebsd
-            GOARCH: arm64
-          - GOOS: illumos
-            GOARCH: amd64
-          - GOOS: ios
-            GOARCH: amd64
-          - GOOS: ios
-            GOARCH: arm64
-          - GOOS: js
-            GOARCH: wasm
-          - GOOS: linux
-            GOARCH: 386
-          - GOOS: linux
-            GOARCH: amd64
-          - GOOS: linux
-            GOARCH: arm
-          - GOOS: linux
-            GOARCH: arm64
-          - GOOS: linux
-            GOARCH: mips
-          - GOOS: linux
-            GOARCH: mips64
-          - GOOS: linux
-            GOARCH: mips64le
-          - GOOS: linux
-            GOARCH: mipsle
-          - GOOS: linux
-            GOARCH: ppc64
-          - GOOS: linux
-            GOARCH: ppc64le
-          - GOOS: linux
-            GOARCH: riscv64
-          - GOOS: linux
-            GOARCH: s390x
-          - GOOS: netbsd
-            GOARCH: 386
-          - GOOS: netbsd
-            GOARCH: amd64
-          - GOOS: netbsd
-            GOARCH: arm
-          - GOOS: netbsd
-            GOARCH: arm64
-          - GOOS: openbsd
-            GOARCH: 386
-          - GOOS: openbsd
-            GOARCH: amd64
-          - GOOS: openbsd
-            GOARCH: arm
-          - GOOS: openbsd
-            GOARCH: arm64
-          - GOOS: openbsd
-            GOARCH: mips64
-          - GOOS: plan9
-            GOARCH: 386
-          - GOOS: plan9
-            GOARCH: amd64
-          - GOOS: plan9
-            GOARCH: arm
-          - GOOS: solaris
-            GOARCH: amd64
-          - GOOS: windows
-            GOARCH: 386
-          - GOOS: windows
-            GOARCH: amd64
-          - GOOS: windows
-            GOARCH: arm
-          - GOOS: windows
-            GOARCH: arm64
+        platform:
+          - aix/ppc64
+          - android/386
+          - android/amd64
+          - android/arm
+          - android/arm64
+          - darwin/amd64
+          - darwin/arm64
+          - dragonfly/amd64
+          - freebsd/386
+          - freebsd/amd64
+          - freebsd/arm
+          - freebsd/arm64
+          - illumos/amd64
+          - ios/amd64
+          - ios/arm64
+          - js/wasm
+          - linux/386
+          - linux/amd64
+          - linux/arm
+          - linux/arm64
+          - linux/mips
+          - linux/mips64
+          - linux/mips64le
+          - linux/mipsle
+          - linux/ppc64
+          - linux/ppc64le
+          - linux/riscv64
+          - linux/s390x
+          - netbsd/386
+          - netbsd/amd64
+          - netbsd/arm
+          - netbsd/arm64
+          - openbsd/386
+          - openbsd/amd64
+          - openbsd/arm
+          - openbsd/arm64
+          - openbsd/mips64
+          - plan9/386
+          - plan9/amd64
+          - plan9/arm
+          - solaris/amd64
+          - windows/386
+          - windows/amd64
+          - windows/arm
+          - windows/arm64
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v4
       with:
         go-version: ${{ matrix.version }}
+    - name: Set GOOS and GOARCH
+      run: |
+        echo "GOOS=$(echo ${{ matrix.platform }} | cut -d/ -f1)" >> $GITHUB_ENV
+        echo "GOARCH=$(echo ${{ matrix.platform }} | cut -d/ -f2)" >> $GITHUB_ENV
     - run: go build
-      env:
-        GOOS: ${{ matrix.GOOS }}
-        GOARCH: ${{ matrix.GOARCH }}
