--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -13,10 +13,10 @@ jobs:
           - "1.21"
         # https://gist.github.com/asukakenji/f15ba7e588ac42795f421b48b8aede63
         platform:
-          - aix/ppc64
-          - android/386
+          # - aix/ppc64
+          # - android/386
           - android/amd64
-          - android/arm
+          # - android/arm
           - android/arm64
           - darwin/amd64
           - darwin/arm64
@@ -26,9 +26,9 @@ jobs:
           - freebsd/arm
           - freebsd/arm64
           - illumos/amd64
-          - ios/amd64
-          - ios/arm64
-          - js/wasm
+          # - ios/amd64
+          # - ios/arm64
+          # - js/wasm
           - linux/386
           - linux/amd64
           - linux/arm
@@ -49,10 +49,10 @@ jobs:
           - openbsd/amd64
           - openbsd/arm
           - openbsd/arm64
-          - openbsd/mips64
-          - plan9/386
-          - plan9/amd64
-          - plan9/arm
+          # - openbsd/mips64
+          # - plan9/386
+          # - plan9/amd64
+          # - plan9/arm
           - solaris/amd64
           - windows/386
           - windows/amd64
