remove broken builds
requires cgo

--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -15,7 +15,7 @@ jobs:
         platform:
           # - aix/ppc64
           # - android/386
-          - android/amd64
+          # - android/amd64
           # - android/arm
           - android/arm64
           - darwin/amd64
