--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         version:
           - "1.22"
-        # https://gist.github.com/asukakenji/f15ba7e588ac42795f421b48b8aede63
+        # https://golang.org/doc/install/source
         platform:
           # - aix/ppc64
           # - android/386
@@ -24,19 +24,18 @@ jobs:
           - freebsd/386
           - freebsd/amd64
           - freebsd/arm
-          - freebsd/arm64
           - illumos/amd64
-          # - ios/amd64
           # - ios/arm64
           # - js/wasm
           - linux/386
           - linux/amd64
           - linux/arm
           - linux/arm64
+          - linux/loong64
           - linux/mips
+          - linux/mipsle
           - linux/mips64
           - linux/mips64le
-          - linux/mipsle
           - linux/ppc64
           - linux/ppc64le
           - linux/riscv64
@@ -44,16 +43,15 @@ jobs:
           - netbsd/386
           - netbsd/amd64
           - netbsd/arm
-          - netbsd/arm64
           - openbsd/386
           - openbsd/amd64
           - openbsd/arm
           - openbsd/arm64
-          # - openbsd/mips64
           # - plan9/386
           # - plan9/amd64
           # - plan9/arm
           - solaris/amd64
+          # - wasip1/wasm
           - windows/386
           - windows/amd64
           - windows/arm
